--- a/composer.json
+++ b/composer.json
@@ -10,12 +10,14 @@
     "require": {
         "php": "^8.0.2|^8.1",
         "ext-json": "*",
+        "beyondcode/laravel-websockets": "^1.13",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
         "jenssegers/agent": "^2.6",
         "laravel/framework": "^9.0",
         "laravel/tinker": "^2.5",
         "laravel/ui": "^3.1",
+        "predis/predis": "^2.0",
         "pusher/pusher-php-server": "^7.0",
         "rtippin/janus-client": "^1.1",
         "rtippin/messenger": "^1.21",
